# json2toon_rs

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  codecov.yml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: encode_decode_bench.rs
examples/: basic.rs  decode.rs  roundtrip.rs
src/: common.rs  decoder.rs  encoder.rs  error.rs  lib.rs
tests/: decoder_tests.rs
